# agentlangg

./: .gitignore  Dockerfile  README.md
agent-client/: .env.example  README.md  pyproject.toml
agent-client/agent/: builder.py  config.py  main.py
harnessed-agent/: .gitignore  README.md  agent.py  llm_prompt.txt  pyproject.toml
harnessed-agent/harness/: context.py  nodes.py  prompts.py  state.py  tools.py  trajectory.py
mcp-postgres-server/: .env.example  README.md  docker-compose.yml  pyproject.toml
mcp-postgres-server/seed/: 001_schema.sql  002_seed.sql
mcp-postgres-server/server/: config.py  logging.py  main.py
mcp-postgres-server/server/db/: base.py  fake.py  real.py  registry.py
mcp-postgres-server/server/tools/: customers.py  orders.py  run_sql.py
mcp-postgres-server/server/utils/: tracing.py
mcp-postgres-server/tests/: conftest.py  test_curated_tools.py  test_run_sql_guards.py  test_server_e2e.py
