[project]
name = "mcp-postgres-server"
version = "0.1.0"
description = "Postgres-backed MCP server: curated tools + a guarded run_sql escape hatch."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.31.0",
    "mcp>=1.27.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "sqlglot>=30.7.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
